manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-lab
  labels:
    istio-injection: enabled
